[gd_scene load_steps=8 format=3 uid="uid://cro6fq6thlcea"]

[ext_resource type="Script" uid="uid://buw4t1x75eok5" path="res://ui.gd" id="1_ui"]
[ext_resource type="Script" uid="uid://jkoy5w1wdlvj" path="res://simulator.gd" id="2_sim"]
[ext_resource type="PackedScene" uid="uid://dock_panel_scene" path="res://dock_panel.tscn" id="3_dock"]
[ext_resource type="Script" uid="uid://vndtp375i6w0" path="res://chart_panel.gd" id="4_chart"]
[ext_resource type="Script" uid="uid://conc_panel_001" path="res://concentration_panel.gd" id="5_conc"]
[ext_resource type="Script" uid="uid://gene_panel_001" path="res://gene_panel.gd" id="6_gene"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_toolbar"]
bg_color = Color(0.12, 0.12, 0.15, 1)
content_margin_left = 10.0
content_margin_top = 6.0
content_margin_right = 10.0
content_margin_bottom = 6.0

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ui")

[node name="SimEngine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_sim")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Toolbar" type="PanelContainer" parent="VBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_toolbar")

[node name="HBox" type="HBoxContainer" parent="VBox/Toolbar"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="VBox/Toolbar/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üß¨ Biochemistry Simulator"

[node name="Sep1" type="VSeparator" parent="VBox/Toolbar/HBox"]
layout_mode = 2

[node name="PauseButton" type="Button" parent="VBox/Toolbar/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "‚è∏ Pause"

[node name="ResetButton" type="Button" parent="VBox/Toolbar/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "‚Ü∫ Reset"

[node name="Sep2" type="VSeparator" parent="VBox/Toolbar/HBox"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="VBox/Toolbar/HBox"]
layout_mode = 2
text = "Speed:"

[node name="SpeedSlider" type="HSlider" parent="VBox/Toolbar/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="SpeedValue" type="Label" parent="VBox/Toolbar/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
text = "1.0x"

[node name="Sep3" type="VSeparator" parent="VBox/Toolbar/HBox"]
layout_mode = 2

[node name="LayoutLabel" type="Label" parent="VBox/Toolbar/HBox"]
layout_mode = 2
text = "Layout:"

[node name="LayoutOption" type="OptionButton" parent="VBox/Toolbar/HBox"]
unique_name_in_owner = true
layout_mode = 2
item_count = 5
selected = 0
popup/item_0/text = "All Panels"
popup/item_1/text = "Focus Chart"
popup/item_1/id = 1
popup/item_2/text = "Focus Genes"
popup/item_2/id = 2
popup/item_3/text = "Two Column"
popup/item_3/id = 3
popup/item_4/text = "Compact"
popup/item_4/id = 4

[node name="ViewMenu" type="MenuButton" parent="VBox/Toolbar/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "üëÅ View"

[node name="Spacer" type="Control" parent="VBox/Toolbar/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChartLabel" type="Label" parent="VBox/Toolbar/HBox"]
layout_mode = 2
text = "Chart:"

[node name="ChartModeOption" type="OptionButton" parent="VBox/Toolbar/HBox"]
unique_name_in_owner = true
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Molecules"
popup/item_1/text = "Enzymes"
popup/item_1/id = 1
popup/item_2/text = "Both"
popup/item_2/id = 2

[node name="AutoScaleCheck" type="CheckBox" parent="VBox/Toolbar/HBox"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Auto Scale"

[node name="MainArea" type="Control" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HSplit1" type="HSplitContainer" parent="VBox/MainArea"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftColumn" type="VSplitContainer" parent="VBox/MainArea/HSplit1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="CellPanel" parent="VBox/MainArea/HSplit1/LeftColumn" instance=ExtResource("3_dock")]
unique_name_in_owner = true
layout_mode = 2
panel_title = "Cell Status"
panel_icon = "üìä"
panel_name = "cell"

[node name="CellContent" type="RichTextLabel" parent="VBox/MainArea/HSplit1/LeftColumn/CellPanel/VBox/ContentMargin/Content"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Loading cell data..."

[node name="ReactionsPanel" parent="VBox/MainArea/HSplit1/LeftColumn" instance=ExtResource("3_dock")]
unique_name_in_owner = true
layout_mode = 2
panel_title = "Reactions"
panel_icon = "‚öóÔ∏è"
panel_name = "reactions"

[node name="ReactionsContent" type="RichTextLabel" parent="VBox/MainArea/HSplit1/LeftColumn/ReactionsPanel/VBox/ContentMargin/Content"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Loading reactions..."

[node name="HSplit2" type="HSplitContainer" parent="VBox/MainArea/HSplit1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MiddleColumn" type="VSplitContainer" parent="VBox/MainArea/HSplit1/HSplit2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="EnzymesPanel" parent="VBox/MainArea/HSplit1/HSplit2/MiddleColumn" instance=ExtResource("3_dock")]
unique_name_in_owner = true
layout_mode = 2
panel_title = "Enzymes"
panel_icon = "üî¨"
panel_name = "enzymes"

[node name="EnzymeScroll" type="ScrollContainer" parent="VBox/MainArea/HSplit1/HSplit2/MiddleColumn/EnzymesPanel/VBox/ContentMargin/Content"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="EnzymePanel" type="VBoxContainer" parent="VBox/MainArea/HSplit1/HSplit2/MiddleColumn/EnzymesPanel/VBox/ContentMargin/Content/EnzymeScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("5_conc")

[node name="MoleculesPanel" parent="VBox/MainArea/HSplit1/HSplit2/MiddleColumn" instance=ExtResource("3_dock")]
unique_name_in_owner = true
layout_mode = 2
panel_title = "Molecules"
panel_icon = "üß™"
panel_name = "molecules"

[node name="MoleculeScroll" type="ScrollContainer" parent="VBox/MainArea/HSplit1/HSplit2/MiddleColumn/MoleculesPanel/VBox/ContentMargin/Content"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MoleculePanel" type="VBoxContainer" parent="VBox/MainArea/HSplit1/HSplit2/MiddleColumn/MoleculesPanel/VBox/ContentMargin/Content/MoleculeScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("5_conc")

[node name="RightColumn" type="VSplitContainer" parent="VBox/MainArea/HSplit1/HSplit2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.3

[node name="GenesPanel" parent="VBox/MainArea/HSplit1/HSplit2/RightColumn" instance=ExtResource("3_dock")]
unique_name_in_owner = true
layout_mode = 2
panel_title = "Gene Expression"
panel_icon = "üß¨"
panel_name = "genes"

[node name="GeneScroll" type="ScrollContainer" parent="VBox/MainArea/HSplit1/HSplit2/RightColumn/GenesPanel/VBox/ContentMargin/Content"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="GenePanel" type="VBoxContainer" parent="VBox/MainArea/HSplit1/HSplit2/RightColumn/GenesPanel/VBox/ContentMargin/Content/GeneScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("6_gene")

[node name="ChartDock" parent="VBox/MainArea/HSplit1/HSplit2/RightColumn" instance=ExtResource("3_dock")]
unique_name_in_owner = true
layout_mode = 2
panel_title = "Concentrations"
panel_icon = "üìà"
panel_name = "chart"
can_collapse = false

[node name="ChartPanel" type="Panel" parent="VBox/MainArea/HSplit1/HSplit2/RightColumn/ChartDock/VBox/ContentMargin/Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("4_chart")

[connection signal="pressed" from="VBox/Toolbar/HBox/PauseButton" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="VBox/Toolbar/HBox/ResetButton" to="." method="_on_reset_pressed"]
[connection signal="value_changed" from="VBox/Toolbar/HBox/SpeedSlider" to="." method="_on_speed_changed"]
[connection signal="item_selected" from="VBox/Toolbar/HBox/LayoutOption" to="." method="_on_layout_selected"]
[connection signal="item_selected" from="VBox/Toolbar/HBox/ChartModeOption" to="." method="_on_chart_mode_changed"]
[connection signal="toggled" from="VBox/Toolbar/HBox/AutoScaleCheck" to="." method="_on_auto_scale_toggled"]
[connection signal="visibility_changed" from="VBox/MainArea/HSplit1/LeftColumn/CellPanel" to="." method="_on_panel_visibility_changed"]
[connection signal="visibility_changed" from="VBox/MainArea/HSplit1/LeftColumn/ReactionsPanel" to="." method="_on_panel_visibility_changed"]
[connection signal="concentration_changed" from="VBox/MainArea/HSplit1/HSplit2/MiddleColumn/EnzymesPanel/VBox/ContentMargin/Content/EnzymeScroll/EnzymePanel" to="." method="_on_enzyme_concentration_changed"]
[connection signal="lock_changed" from="VBox/MainArea/HSplit1/HSplit2/MiddleColumn/EnzymesPanel/VBox/ContentMargin/Content/EnzymeScroll/EnzymePanel" to="." method="_on_enzyme_lock_changed"]
[connection signal="visibility_changed" from="VBox/MainArea/HSplit1/HSplit2/MiddleColumn/EnzymesPanel" to="." method="_on_panel_visibility_changed"]
[connection signal="concentration_changed" from="VBox/MainArea/HSplit1/HSplit2/MiddleColumn/MoleculesPanel/VBox/ContentMargin/Content/MoleculeScroll/MoleculePanel" to="." method="_on_molecule_concentration_changed"]
[connection signal="lock_changed" from="VBox/MainArea/HSplit1/HSplit2/MiddleColumn/MoleculesPanel/VBox/ContentMargin/Content/MoleculeScroll/MoleculePanel" to="." method="_on_molecule_lock_changed"]
[connection signal="visibility_changed" from="VBox/MainArea/HSplit1/HSplit2/MiddleColumn/MoleculesPanel" to="." method="_on_panel_visibility_changed"]
[connection signal="gene_toggled" from="VBox/MainArea/HSplit1/HSplit2/RightColumn/GenesPanel/VBox/ContentMargin/Content/GeneScroll/GenePanel" to="." method="_on_gene_toggled"]
[connection signal="visibility_changed" from="VBox/MainArea/HSplit1/HSplit2/RightColumn/GenesPanel" to="." method="_on_panel_visibility_changed"]
[connection signal="visibility_changed" from="VBox/MainArea/HSplit1/HSplit2/RightColumn/ChartDock" to="." method="_on_panel_visibility_changed"]
